--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -20,13 +20,6 @@ body#tinymce {
 	float:none;
 	}
 	
-#footer {
-	height: 50px;
-	bottom: 10px;
-	top: auto;
-	}
-
-
 #main-content, #main, #content {
 	background: #fff;
 	width: auto;
@@ -38,19 +31,19 @@ body#tinymce {
 	padding: 34px;
 	}
 
-#top {
-	top: 0;
+#top, #footer {
+	top: 40px;
 	bottom: auto;
-	height: 80px;
+	height: 50px;
 	overflow: hidden;
 	}
 
-#main-content {
-	left: 240px;
-	overflow: auto;
+#footer {
+	bottom: 10px;
+	top: auto;
+	width: auto;
 	}
 
-#sidebar-left {	
+#main-content {
 	overflow: auto;
-	width: 200px;
 	}
