added body.sidebar-left declarations, etc.

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -70,6 +70,36 @@ a, a:visited {
 	}
 
 
+body.sidebar-right #content-wrapper, body.header-right #header-wrapper {
+    padding-left: 0;
+    }
+
+
+body.sidebar-left #content-wrapper, body.header-left #header-wrapper {
+    padding-right: 0;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Colors for testing only */
 
