small fix on single column header

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -110,4 +110,5 @@ body.header-left-right #header-right {
     
 body.header-left #header-left, body.header-right #header-right {
     width: 100%;
+    margin: 0;
     }
