--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -51,6 +51,12 @@ h1 a, h2 a, h3 a, #sidebar-left a {
     }
 
 
+#footer {
+    width: 722px;
+    text-align: center;
+    margin-left: 179px;
+    }
+
 
 
 
