minor changes to header CSS

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -24,6 +24,9 @@ ul, li {
 	padding: 0;
 	}
 	
+#navbar li {
+    display:inline;
+    }
 
 a, a:visited {
 	text-decoration: none;
@@ -82,6 +85,10 @@ body.sidebar-left #content-wrapper {
 
 
 /* HEADERS */
+
+body.header-main #header-main {
+    padding: 10px 0;
+    }
 
 body.header-main-right #header-wrapper {
     padding-left: 0;
