margin to header

--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -81,6 +81,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #header {
     height: 141px;
     font-family: georgia, serif;
+    margin-left: 10px;
     }
 
 #header h1 {
@@ -148,6 +149,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #content-wrapper-bottom {
     clear: both;
     }
+
 
 body.sidebar-left #content {
     margin-left: 30px;
