fixed scroll bar bug

--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -22,11 +22,10 @@ body#tinymce {
 	margin: 0;
 	left: 0;
 	right: 0;
-	top: 54px;
+	top: 58px;
 	bottom: 56px;
 	position: absolute;
 	float:none;
-	height: 100%;
 	width: 100%;
 	overflow: hidden;
 	}
@@ -39,8 +38,8 @@ body#tinymce {
 #top, #footer {
 	top: 20px;
 	bottom: auto;
-	height: 44px;
-	background:url(images/top-bottom-bg.png) repeat-x #000 0 18px;
+	height: 38px;
+	background:url(images/top-bottom-bg.png) repeat-x #000 0 -9px;
 	}
 
 #footer {
@@ -69,6 +68,7 @@ body#tinymce {
 .frame {
   position: relative;
   overflow-y: auto;
+  overflow-x: hidden;
   height: 100%;
   }
 
