fixed height for admin_menu

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -12,7 +12,20 @@ body {
 	min-width: 680px;
 	}
 
+#admin-menu {
+  height: 22px;
+  line-height: 22px;
+  }
 
+#admin-menu, #admin-menu li li.expandable, #admin-menu li li {
+  background:#800c0c;
+  }
+  
+#admin-menu li li:hover {
+  background: #984949;
+  }
+
+  
 /* TYPE STYLES */
 
 p, div.messages {
