--- a/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-toolbar.css
+++ b/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-toolbar.css
@@ -1,9 +1,60 @@
+#scholarcp-toolbar-toolbar {
+  float: left;
+  margin-left: 10px;
+  }
+
+#scholarcp-toolbar-user  {
+  float: right;
+  margin-right: 10px;
+  }
+
+#scholarcp-top-admin-menus li {
+  height: 24px;
+  margin-top: 6px;
+  }
+
+#scholarcp-toolbar-toolbar li {
+  float: left;
+  margin-right: 18px;
+  }
+  
+#scholarcp-toolbar-user li {
+  float: right;
+  margin-left: 18px;
+  } 
+
 #scholarcp-toolbar-toolbar li a {
-  padding-left: 26px;
+  padding-left: 27px;
   background-repeat: no-repeat;
   background-color: transparent;
+  font-size: 10px;
+  line-height: 24px;
+  font-weight: normal;
+  color:#ddd;
+  display:block;
+  height: 24px;
   }
 
 a#admin-link-scholarcp-content {
   background-image: url(images/topmenu-content.png);
+  }
+  
+a#admin-link-scholarcp-news {
+  background-image: url(images/topmenu-news.png);
+  } 
+  
+a#admin-link-scholarcp-settings {
+  background-image: url(images/topmenu-settings.png);
+  }
+  
+a#admin-link-scholarcp-users {
+  background-image: url(images/topmenu-users.png);
+  } 
+a#admin-link-scholarcp-support {
+  background-image: url(images/topmenu-support.png);
+  }
+  
+#scholarcp-toolbar-user li a {
+  font-size: 12px;
+  color: #ddd;
   }
