latest changes to scholar admin theme

--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -58,6 +58,8 @@ body#tinymce {
 #cp-sidemenu {
   width: 200px;
   right: auto;
+  background:#f2f3f3;
+  border-right: 1px solid #bfc6c6;
   }
       
 #cp-content {
@@ -77,8 +79,65 @@ body#tinymce {
   width: 100%;
   overflow-x: hidden;
   }
- 
 	
 #cp-content .innerframe {
   padding: 30px 30px 0 30px;
   }
+  
+  
+
+/* First Column */
+
+#cp-sidemenu li a, #cp-sidemenu li a:visited {
+  color: #626161;
+  font-weight: bold;
+  padding: 10px 23px;
+  border-bottom: 1px solid #bfc6c6;
+  display:block;
+  font-size: 14px;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+/* Get rid of all this once the footer content is in a module */
+
+#footer h3 {
+  float: left;
+  width: 463px;
+  height: 15px;
+  text-indent: -999em;
+  background: url(images/footer-logo.png) no-repeat transparent;
+  margin-left: 33px;
+  margin-top: 21px;
+  }
+  
+#footer ul {
+  float: right;
+  color: #ddd;
+  font-size: 12px;
+  margin-top: 22px;
+  margin-right: 10px;
+  }
+  
+#footer li {
+  display:inline;
+  margin-left: 8px;
+  border-right: 1px solid #ddd;
+  padding-right: 8px;
+  text-align: right;
+  }
+ 
+#footer li.last {
+  border: none;
+  }
+ 
+ 
+ 
+  
