active trail added to top menu

--- a/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-toolbar.css
+++ b/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-toolbar.css
@@ -9,7 +9,7 @@
   }
 
 #scholarcp-top-admin-menus li {
-  height: 24px;
+  height: 32px;
   margin-top: 6px;
   }
 
@@ -17,7 +17,11 @@
   float: left;
   margin-right: 18px;
   }
-  
+
+#scholarcp-toolbar-toolbar li.active {
+  background: url(images/topmenu-active.png) no-repeat transparent 8px 100%;
+  }
+ 
 #scholarcp-toolbar-user li {
   float: right;
   margin-left: 18px;
