various minor changes

--- a/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-theme-picker.css
+++ b/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-theme-picker.css
@@ -14,7 +14,7 @@ li.item-theme-picker img {
   border: 1px solid #959191;
   }
   
-div#next, div#prev {
+#next, #prev {
   width: 3em;
   height: 5em;
   top: 0;
@@ -23,8 +23,12 @@ div#next, div#prev {
   background: transparent url(images/next.png);
   }
   
-div#prev {
+#prev {
   right: auto;
   left: 15em;
   background-image: url(images/prev.png);
+  }
+  
+.theme-picker h3 {
+  font-size: .9em;
   }
