float input#edit-submit

--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -98,10 +98,20 @@ body#tinymce {
   }
   
   
+#cp-sidemenu li.active a {
+  background: url(images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;
+  color: #000;
+  }
   
   
   
   
+/* Forms */
+
+input#edit-submit {
+  float:right;
+  margin-right: 60px;
+  }
   
   
   
@@ -137,6 +147,9 @@ body#tinymce {
 #footer li.last {
   border: none;
   }
+  
+  
+  
  
  
  
