adding initial theming to layout module

--- a/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
+++ b/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
@@ -1,1 +1,49 @@
-/* */
+#scholarlayout-container {
+  width: 848px;
+  height: 625px;
+  background: url(images/layout-map.png) no-repeat #fff;
+  position: relative;
+  }
+  
+div.layout-region {
+  position: absolute;
+  width: 202px;
+  height: 121px;
+  top: 26px;
+  left: 42px;
+  }
+  
+div.layout-region:hover {
+  background: #c4e5a3;
+  }
+
+
+#scholarlayout-header-main, #scholarlayout-content-main {
+  width: 244px;
+  left: 247px;
+  }
+
+#scholarlayout-header-right, #scholarlayout-sidebar-right {
+  left: 493px;
+  }
+
+#scholarlayout-content-main, 
+#scholarlayout-sidebar-left, 
+#scholarlayout-sidebar-right {
+  top: 182px;
+  height: 356px;
+  }
+
+  
+#scholarlayout-navbar,#scholarlayout-footer {
+  width: 653px;
+  height: 30px;
+  top: 150px;
+  }
+  
+ #scholarlayout-footer {
+  top: 541px;
+  height: 42px;
+  left: 43px;
+  }
+  
