removed padding from innerframe - adding .pad class

--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -80,8 +80,8 @@ body#tinymce {
   overflow-x: hidden;
   }
 	
-#cp-content .innerframe {
-  padding: 30px 30px 0 30px;
+#cp-content .innerframe .pad {
+  margin: 30px 0 0 30px;
   }
   
   
