adding top menu presentation

--- a/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
+++ b/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
@@ -47,3 +47,20 @@ div.layout-region:hover {
   left: 43px;
   }
   
+  
+#scholarlayout-top-widgets {
+  height:130px;
+  background:#eaebe9;
+  width: 100%;
+  }
+  
+li.scholarlayout-top-item {
+  float: left;
+  width: 118px;
+  text-align: center;
+  font-size: 11px;
+  font-weight: bold;
+  color:#444545;
+  padding-top: 99px;
+  background:url(images/widget-bg.png) no-repeat transparent 50% 13px;
+  }
