normalized class name of widget

--- a/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
+++ b/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
@@ -54,7 +54,7 @@ div.layout-region:hover {
   width: 100%;
   }
   
-li.scholarlayout-top-item {
+#scholarlayout-top-widgets li.scholarlayout-item {
   float: left;
   width: 118px;
   text-align: center;
