fix active trail

--- a/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-toolbar.css
+++ b/sites/scholar/modules/scholar_modules/scholarcp/theme/scholarcp-toolbar.css
@@ -18,7 +18,7 @@
   margin-right: 18px;
   }
 
-#scholarcp-toolbar-toolbar li.active {
+#scholarcp-toolbar-toolbar li.active-trail {
   background: url(images/topmenu-active.png) no-repeat transparent 8px 100%;
   }
  
