some theming of the placed widgets

--- a/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
+++ b/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
@@ -57,13 +57,26 @@
   width: 100%;
   }
   
-#scholarlayout-top-widgets li.scholarlayout-item {
-  float: left;
-  width: 118px;
-  text-align: center;
+li.scholarlayout-item {
   font-size: 11px;
   font-weight: bold;
   color:#444545;
-  padding-top: 99px;
-  background:url(images/widget-bg.png) no-repeat transparent 50% 13px;
+  cursor: pointer;
+  }
+  
+#scholarlayout-top-widgets li.scholarlayout-item {
+  float: left;
+  width: 118px;
+  height: 39px;
+  text-align: center;
+  color:#444545;
+  padding-top: 91px;
+  background:url(images/widget-bg.png) no-repeat transparent 50% 10px;
+  }
+  
+#scholarlayout-container li.scholarlayout-item {
+  margin: 3px;
+  padding: 4px 4px 4px 14px;
+  border: 1px solid #8a8888;
+  background: url(images/scholarlayout-item-placed.png) repeat-x 0 0 #fff;
   }
