some theming of the placed widgets

--- a/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
+++ b/sites/scholar/modules/scholar_modules/scholarlayout/theme/scholarlayout.css
@@ -80,3 +80,15 @@ li.scholarlayout-item {
   border: 1px solid #8a8888;
   background: url(images/scholarlayout-item-placed.png) repeat-x 0 0 #fff;
   }
+  
+.scholarlayout-item-settings {
+  color:#f60000;
+  padding-right: 14px;
+  background: url(images/arrow-red.png) no-repeat 100% 1px;
+  font-weight: normal;
+  margin-left: 2px;
+  }
+  
+#scholarlayout-top-widgets .scholarlayout-item-settings {
+  display:none;
+  }
