--- a/sites/scholar/modules/scholar_modules/scholarcp/modules/scholarlayout/theme/scholarlayout.css
+++ b/sites/scholar/modules/scholar_modules/scholarcp/modules/scholarlayout/theme/scholarlayout.css
@@ -87,8 +87,25 @@ li.scholarlayout-item {
   background: url(images/arrow-red.png) no-repeat 100% 1px;
   font-weight: normal;
   margin-left: 2px;
+  display:inline;
+  position: relative;
+  width: 12px;
+  height: 12px;
+  }
+
+#scholarlayout-top-widgets .scholarlayout-item-settings,.scholarlayout-item-settings ul {
+  display:none;
   }
   
-#scholarlayout-top-widgets .scholarlayout-item-settings {
-  display:none;
+.scholarlayout-item-settings:hover ul {
+  display:block;
+  position:absolute;
+  width: 100px;
+  padding: 10px;
+  background: #fff;
+  right: -115px;
+  top: -16px;
+  border: 1px solid #8a8888;
+  color: #444545;
+  z-index: 10;
   }
