minor changes to tables and forms

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -25,14 +25,14 @@ fieldset {
 	}
 	
 .form-item {
-	margin-bottom: .5em;
-	}
+	margin: auto;
+  }
 
 label, .description {
 	display:block;
 	font-weight: bold;
 	color:#333;
-	font-size: .9em;
+	font-size: 1em;
 	}	
 
 .description {
@@ -43,7 +43,8 @@ label, .description {
 	
 legend {
 	font-weight: bold;
-	color:#666;
+	color:#425e69;
+	font-size: 1.2em;
 	}
 	
 
