Made footer smaller

--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -23,7 +23,7 @@ body#tinymce {
 	left: 0;
 	right: 0;
 	top: 60px;
-	bottom: 56px;
+	bottom: 38px;
 	position: absolute;
 	float:none;
 	width: 100%;
@@ -43,11 +43,9 @@ body#tinymce {
 	}
 
 #footer {
-  height: 56px;
 	bottom: 0;
 	top: auto;
 	width: auto;
-	background-position: 0 0;
 	}
 
 #cp-sidemenu, #cp-content {
@@ -125,15 +123,20 @@ input#edit-submit {
   text-indent: -999em;
   background: url(images/footer-logo.png) no-repeat transparent;
   margin-left: 33px;
-  margin-top: 21px;
+  margin-top: 14px;
   }
   
 #footer ul {
   float: right;
   color: #ddd;
   font-size: 12px;
-  margin-top: 22px;
+  margin-top: 13px;
   margin-right: 10px;
+  }
+
+#footer a, #foot a:visited {
+  color: #ddd;
+  text-decoration: underline;
   }
   
 #footer li {
