--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -31,13 +31,17 @@ body {
 p, div.messages {
 	margin-bottom: 1.5em;
 	}
+	
+#header p {
+  margin: 0;
+  }
 
 ul, li {
 	list-style: none;
 	padding: 0;
 	}
 	
-#navbar li, #header-top li {
+#navbar li, #header-top li, .views-admin-links li, ul.inline li {
     display:inline;
     }
 
