--- a/sites/all/themes/scholar_base/html-elements.css
+++ b/sites/all/themes/scholar_base/html-elements.css
@@ -3,3 +3,9 @@
 /****
  **** HTML ELEMENT STYLING
  ****/
+
+.draggable a.tabledrag-handle {
+  height:1.1em;
+  margin:-.1em 0 0 0;
+  padding:0 .5em 0 0;
+  }
