fixes for navbar

--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -52,9 +52,8 @@ h1 a, h2 a, h3 a, #sidebar-left a {
     }
     
 #sidebar-right {
-    border-left: 1px solid #8c969a;
+    border-left: 1px solid #D8D6D6;
     }
-
 
 #footer {
     width: 722px;
@@ -90,7 +89,19 @@ body.no-sidears #header, body.sidebar-right {
     }    
 
 #header p {
-  border-top: 1px solid #8c969a;
+  border-top: 1px solid #D8D6D6;
+  }
+  
+body.navbar #header p {
+  border: none;
+  }
+  
+#header-right {
+  width: 70px
+  }
+  
+#header-wrapper {
+  padding-right: 90px;
   }
 
 
@@ -143,6 +154,7 @@ body.sidebar-left #navbar, body.two-sidebars #navbar {
   
 body.sidebar-left #navbar li, body.two-sidebars #navbar li {
   border:none;
+  line-height: normal;
   }
   
 body.sidebar-left #content-wrapper, body.two-sidebars #content-wrapper {
