--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -96,7 +96,8 @@ body#tinymce {
   }
   
   
-#cp-sidemenu li.active a {
+#cp-sidemenu li.active a,
+#cp-sidemenu li.active-trail a {
   background: url(images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;
   color: #000;
   }
